--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -1,6 +1,6 @@
 <!-- <div class="container"> -->
  <div class="user-profile">
-   <div class="profile-header-background img-responsive"><img src="assets/images/Profile/city.jpg"alt="Profile Header Background"></div>
+   <div class="profile-header-background img-responsive"><img src="assets/images/Profile/3.jpg"alt="Profile Header Background"></div>
    <div class="row">
      <div class="col-md-4">
        <div class="profile-info-left">
@@ -45,7 +45,6 @@
                <div class="profile-info-right">
                  <ul class="nav nav-pills nav-pills-custom-minimal custom-minimal-bottom admin-menu">
                    <li class="active"><a href="datos" ui-sref="users-update({idUsers:vm.user.idUsers})" data-target-id="datos">DATOS</a></li>
-                   <li><a ui-sref="reservations-list" class="active" data-target-id="reservaciones">MIS RESERVACIONES</a></li>
                  </ul>
 
                  <div class="profile-content col-xs-12 admin-content" id="datos">
@@ -84,7 +83,61 @@
                  </div>
 
                  <div class="profile-content col-xs-12 admin-content" id="reservaciones">
-                   <h2>reservas</h2>
+
+
+
+                   <section class="container list" ng-cloak="">
+                   <div class="panel panel-primary tabla">
+                   	<div class="panel-heading">
+                      <h2 class="">Mis Reservas</h2>
+                   		<h3 class="panel-title"><strong>Buscar</strong></h3>
+                   		<input class="letter form-control" type="text" ng-model="vm.filtro">
+                   	</div>
+
+                   <div class="panel-body">
+                   	<md-table-container>
+                   		<table md-table>
+                   			<thead md-head>
+                   				<tr>
+                             <th md-column> <strong>Fecha de la reserva</strong></th>
+                             <th md-column> <strong>Hora Inicial</strong></th>
+                             <th md-column> <strong>Hora Final</strong></th>
+                             <th md-column> <strong>Nombres Usuario</strong></th>
+                             <th md-column> <strong>Apellidos Usuario</strong></th>
+                             <th md-column> <strong>Establecimiento</strong></th>
+                             <th md-column> <strong>Cancha</strong></th>
+                   					<th md-column> <strong>Switch</strong></th>
+                   					<th md-column> <strong>Actualizar</strong></th>
+                   				</tr>
+                   			</thead>
+                   			<tbody md-body>
+                   				<tr md-row ng-repeat="item in vm.reservations | limitTo:vm.query.limit: (vm.query.page -1) * vm.query.limit | filter:vm.filtro">
+                   					<td md-cell>{{item.date | date:'yyyy-MM-dd'}}</td>
+                   					<td md-cell>{{item.initialHour | date:'HH:mm:ss'}}</td>
+                             <td md-cell>{{item.finalHour | date:'HH:mm:ss'}}</td>
+                             <td md-cell>{{item.idUsers.names}}</td>
+                             <td md-cell>{{item.idUsers.lastNames}}</td>
+                             <td md-cell>{{item.idSoccerFields.idHeadquarters.idEstablishments.name}}</td>
+                             <td md-cell>{{item.idSoccerFields.name}}</td>
+                   					<td md-cell><md-switch ng-model="item.activo" aria-label="Switch 2" ng-change="vm.cambiarEstado(item)"> Activo: {{item.activo}} </md-switch></td>
+                             <td md-cell><a class="btn btn-primary" >Editar</a></td>
+                   				</tr>
+                   			</tbody>
+                   		</table>
+                   	</md-table-container>
+
+                   	<md-table-pagination md-limit="vm.query.limit"
+                   	                     md-limit-options="[5, 10, 15, 20]"
+                   											 md-page="vm.query.page"
+                   											 md-total="{{vm.reservations.length}}"
+                   											 md-on-paginate="getDeserts" md-page-select>
+                   	</md-table-pagination/>
+                   </div>
+                   </div>
+
+                   	<!--MD DATA TABLE-->
+                   </section>
+
 
                  </div>
 
