--- a/client/app/reservations/reservations.html
+++ b/client/app/reservations/reservations.html
@@ -1,7 +1,7 @@
 <div class="Register">
   <div class="container">
     <div class="row">
-      
+
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
         <form class="Register-form" name="registerForm" ng-submit="vm.createReservations()">
 
@@ -13,10 +13,11 @@
           <br>
 
           <div layout="row">
-            <md-content flex="45">
+            <md-content flex>
               <label class="Registrer-label">Fecha</label>
               		<div class="form-group ">
-              			<md-datepicker type="date" name="registerForm.date" class="form-control" md-placeholder="fecha"  md-is-open="ctrl.isOpen" ng-model="vm.reservations.date" required> </md-datepicker>
+              			<md-datepicker type="date" name="registerForm.date" class="form-control" md-placeholder="fecha"
+                     md-is-open="ctrl.isOpen" ng-model="vm.reservations.date" required> </md-datepicker>
               		</div>
               <div ng-messages="registerForm.date.$error">
                 <div ng-message="required">La fecha es requerida</div>
@@ -75,7 +76,6 @@
                 </script>
               </div>
             </div>
-
             <div ng-messages="registerForm.initialHour.$error">
               <div ng-message="required">La hora es requerida</div>
             </div>
@@ -169,14 +169,12 @@
               </div>
             </md-input-container-->
 
-            <md-input-container flex="45">
-              <label>Cancha</label>
-              <md-select name="soccerFields" ng-model="vm.reservations.idSoccerFields.idSoccerFields" required>
+            <md-input-container flex>
+              <md-select name="soccerFields" ng-model="vm.reservations.idSoccerFields.idSoccerFields" placeholder="Cancha" required>
                 <md-option  ng-value="{{item.idSoccerFields}}" ng-repeat="item in vm.soccerFields">
                   {{item.name}}
                 </md-option>
               </md-select>
-              <br>
               <div ng-messages="registerForm.soccerFields.$error">
                 <div ng-message="required">Por favor ingrese una cancha.</div>
               </div>
