se agregan modulos de establecimientos y canchas

--- a/client/index.html
+++ b/client/index.html
@@ -120,6 +120,8 @@
     <script src="app/departments/departments.service.js"></script>
     <script src="app/document_types/document_types.service.js"></script>
     <script src="app/establishments/establishments.service.js"></script>
+    <script src="app/establishments/establishments/establishments.controller.js"></script>
+    <script src="app/establishments/establishments/establishments.js"></script>
     <script src="app/forbidden/forbidden.controller.js"></script>
     <script src="app/forbidden/forbidden.js"></script>
     <script src="app/info/info.controller.js"></script>
@@ -138,6 +140,8 @@
     <script src="app/reservations/reservations.js"></script>
     <script src="app/reservations/reservations.service.js"></script>
     <script src="app/soccer-fields/soccer-fields.service.js"></script>
+    <script src="app/soccer-fields/soccer-fields/soccer-fields.controller.js"></script>
+    <script src="app/soccer-fields/soccer-fields/soccer-fields.js"></script>
     <script src="app/upload-file/upload-file-user/upload-file.component.js"></script>
     <script src="app/upload-file/upload-file.routes.js"></script>
     <script src="app/upload-file/upload-file/upload-file.component.js"></script>
