--- a/client/app/users/users-update/users-update.html
+++ b/client/app/users/users-update/users-update.html
@@ -2,22 +2,25 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <form class="Update-form" ng-submit="vm.updateUser()">
+        <form class="Update-form" ng-submit="vm.updateUser()" name="UpdateForm">
 
           <div class="text-center">
             <h2 class="Update-title">Actualizar datos</h2>
           </div>
           <br>
 
-          
+
           <div class="form-group col-md-6">
             <label class="Update-label">Tipo Documento</label>
-            <select class="form-control" name="typeDocument"  ng-model="vm.user.idDocumentTypes.idDocumentTypes">
+            <select class="form-control" name="typeDocument"  ng-model="vm.user.idDocumentTypes.idDocumentTypes" required>
                <option ng-value="{{item.idDocumentTypes}}" ng-repeat="item in vm.documentType">
                  {{item.description}}
                </option>
                <option value="" disabled selected>Tipo de documento</option>
             </select>
+            <div ng-messages="UpdateForm.typeDocument.$error">
+              <div ng-message="required">seleccione el tipo de documento</div>
+            </div>
           </div>
 
 
