--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -52,6 +52,41 @@
   </div>
 </section>
 
+
+<section class="InfoContainer img-thumbnail col-md-12 " >
+  <h2>Establecimientos</h2>
+  <!-- <div class="container"> -->
+   <div class="row text-center">
+    <div class="col-xs-12 col-md-4 img-thumbnail contenido">
+      <img class="imgInfo" src="../../assets/images/main/6.jpg" alt="" />
+      <h3>Maracana</h3>
+      <h6>Calle 22a # 21-12</h6>
+      <button type="button" class="btn btn-lg btn-success ver">Ver Mas</button>
+    </div>
+    <div class="col-xs-12 col-md-4 img-thumbnail">
+      <img class="imgInfo" src="../../assets/images/main/4.jpg" alt="" />
+      <h3>Juventus</h3>
+      <h6>Calle 42 # 9-12</h6>
+      <button type="button" class="btn btn-lg btn-success ver">Ver Mas</button>
+    </div>
+    <div class="col-xs-12 col-md-4 img-thumbnail">
+      <img class="imgInfo" src="../../assets/images/main/3.JPG" alt="" />
+      <h3>La tonga</h3>
+      <h6>calle 47 # 34-12</h6>
+      <button type="button" class="btn btn-lg btn-success ver">Ver Mas</button>
+
+    </div>
+   </div>
+  </div>
+  <br>
+  <div class="InfoContainer-button">
+    <button type="button" class="btn  btn-warning mas  "><i class="fa fa-plus"></i> Mas Informacion</button>
+
+  </div>
+
+</section>
+
+
 <section class="Intro">
   <div class="container">
     <div class="row text-left">
