se hacen cambios en el reservation

--- a/client/app/nosotros/nosotros.html
+++ b/client/app/nosotros/nosotros.html
@@ -1,42 +1,19 @@
 <div class="Cancha-Main">
 
-<!--section class="Cancha-description">
 
-
-    <div class="MainImage">
-        <article class="Cancha-Paint">
-            <p class="Cancha">SOCIAL SOCCER</p>
-            <img class="Cancha-image" src="../assets/images/main/2.jpg" alt="">
-            <figure class="Descripcion">
-                <figcaption class="Work-description">
-                    <h2 class="Somos-title">¿Quienes somos? </h2>
-                    <p class="Somos">¡Nosotros somos lo que tu buscabas!. Nosotros te ayudamos a no tener obstaculos para poderte divertir y hacer tu reservas desde cualquier lugar donde estes por medio de tu movil</p>
-                </figcaption>
-            </figure>
-        </article>
-    </div>
-</section>
-<section class="Cancha-d">
-    <h2 class="Somos-title">¡Has tus reservas! </h2>
-    <p class="Descripcion">¡Puedes hacer tu reserva gratis desde tu movil y divertirte con tus amigos para pasar momentos innolvidables!
-    </p>
-    <img class="Cancha-image" src="../assets/images/main/1.jpg" alt="">
-  </article>
-
-</section-->
 
 <div class="Informacion">
   <div class="container">
     <div class="row text-center containerText">
       <div class="Informacion-item col-xs-12 col-sm-12 col-md-5">
         <i class=""></i>
-        <img class="Cancha-image" src="../assets/images/main/2.jpg">
+        <img class="Cancha-image img-resposive" src="../assets/images/main/2.jpg">
         <h3 class="Tittle">¿Quienes somos?</h3>
         <h4 class="Text">Te ayudamos a no tener obstaculos para poderte divertir y hacer tu reservas desde cualquier lugar donde estes</h4>
       </div>
       <div class="Informacion-item col-xs-12 col-md-5 col-md-push-2 col-xs-push-0">
         <i class=""></i>
-        <img class="Cancha-image" src="../assets/images/main/1.jpg">
+        <img class="Cancha-image img-resposive" src="../assets/images/main/1.jpg">
         <h3 class="Tittle">¡Has tus reservas!</h3>
         <h4 class="Text">¡Puedes hacerlo gratis y divertirte con tus amigos para pasar momentos innolvidables!</h4>
       </div>
@@ -72,7 +49,7 @@
           </div>
         </div>
       </div>
-      <div class="card1 col-md-12 ">
+      <!-- <div class="card1 col-md-12 ">
         <div class="firstinfo"><img src="assets/images/Profile/original.png"/>
           <div class="profileinfo">
             <h1>Andres Felipe Contreras</h1>
@@ -80,7 +57,7 @@
             <p class="bio">Lived all my life on the top of mount Fuji, learning the way to be a Ninja Dev.</p>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
 
   </div>
@@ -110,7 +87,7 @@
           </div>
         </div>
       </div>
-      <div class="card1">
+      <!-- <div class="card1">
         <div class="firstinfo"><img src="assets/images/Profile/original.png"/>
           <div class="profileinfo">
             <h1>Andres Felipe Contreras</h1>
@@ -118,7 +95,7 @@
             <p class="bio">Lived all my life on the top of mount Fuji, learning the way to be a Ninja Dev.</p>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
 
   </div>
