se hacen modificaciones en users-upate

--- a/client/app/users/users-update/users-update.html
+++ b/client/app/users/users-update/users-update.html
@@ -75,11 +75,11 @@
 
 
           <div class="form-group text-center col-md-6">
-            <a href="" type="button" class="MarginTop btn btn-success btn-lg">Cambiar contraseña</a>
+            <a href="" type="button" class="MarginTop btn btn-success">Cambiar contraseña</a>
           </div>
 
           <div class="text-center ">
-            <button class="MarginTop btn btn-primary btn-lg" type="submit">Actualizar</button>
+            <button class="MarginTop btn btn-primary" type="submit">Actualizar</button>
           </div>
         </form>
       </div>
