se agregan cambios en el profile

--- a/client/app/reservations/reservations.html
+++ b/client/app/reservations/reservations.html
@@ -27,10 +27,10 @@
           </div>
           <div class="row">
 
-          <md-input-container flex="45">
+          <md-input-container flex="46">
             <label class="Registrer-label">Hora Inicial</label>
-            <div class="form-group">
-              <div class="input-group hora">
+            <div class="form-group ">
+              <div class="input-group hora col-md-12">
                 <span class="input-group-addon caja">
                   <span class="glyphicon glyphicon-time reloj" ></span>
                 </span>
@@ -81,10 +81,10 @@
             </div>
           </md-input-container>
 
-          <md-input-container flex="45">
+          <md-input-container flex="46">
             <label class="Registrer-label">Hora final</label>
             <div class="form-group">
-              <div class="input-group hora">
+              <div class="input-group hora col-md-12">
                 <span class="input-group-addon caja">
                   <span class="glyphicon glyphicon-time reloj"></span>
                 </span>
