se realizan cambios en el main

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -141,6 +141,7 @@
                   <li class="list-group-item"><i class="icon-ok text-danger"></i>Soporte 24/7</li>
                   <li class="list-group-item"><i class="icon-ok text-danger"></i>Atencion</li>
                   <li class="list-group-item"><i class="icon-ok text-danger"></i>Servicio</li>
+                  <li class="list-group-item"><i class="icon-ok text-danger"></i>Beneficios</li>
               </ul>
               <div class="panel-footer">
                   <a class="btn btn-block boton2" href="">COMPRAR</a>
@@ -160,6 +161,8 @@
                   <li class="list-group-item"><i class="icon-ok text-danger"></i>Actualizacion</li>
                   <li class="list-group-item"><i class="icon-ok text-danger"></i>Soporte 24/7</li>
                   <li class="list-group-item"><i class="icon-ok text-danger"></i>Atencion</li>
+                  <li class="list-group-item"><i class="icon-ok text-danger"></i>Servicio</li>
+                  <li class="list-group-item"><i class="icon-ok text-danger"></i>Beneficios</li>
               </ul>
               <div class="panel-footer">
                   <a class="btn btn-block boton3" href="">COMPRAR</a>
