se agregan cambios en el main, establishments y courts

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -80,7 +80,7 @@
   </div>
   <br>
   <div class="InfoContainer-button">
-    <button type="button" class="btn  btn-warning mas  "><i class="fa fa-plus"></i> Mas Informacion</button>
+    <button type="button" ui-sref="establishments" class="btn  btn-warning mas  "><i class="fa fa-plus"></i> Mas Informacion</button>
 
   </div>
 
