--- a/client/app/establishments/establishments/establishments.html
+++ b/client/app/establishments/establishments/establishments.html
@@ -1,1 +1,29 @@
-<div>This is the establishments view.</div>
+<h1 class="text-center"><strong>ESTABLECIMIENTOS</strong></h1>
+
+<section class="InfoContainer img-thumbnail col-md-12 " >
+  <!-- <div class="container"> -->
+   <div class="row text-center">
+    <div class="col-xs-12 col-md-4 img-thumbnail contenido">
+      <img class="imgInfo" src="../../assets/images/main/6.jpg" alt="" />
+      <h3>Maracana</h3>
+      <h6>Calle 22a # 21-12</h6>
+      <button type="button" ui-sref="courts" class="btn btn-lg btn-success ver">Ver Canchas</button>
+    </div>
+    <div class="col-xs-12 col-md-4 img-thumbnail">
+      <img class="imgInfo" src="../../assets/images/main/4.jpg" alt="" />
+      <h3>Juventus</h3>
+      <h6>Calle 42 # 9-12</h6>
+      <button type="button" ui-sref="courts" class="btn btn-lg btn-success ver">Ver Canchas</button>
+    </div>
+    <div class="col-xs-12 col-md-4 img-thumbnail">
+      <img class="imgInfo" src="../../assets/images/main/3.JPG" alt="" />
+      <h3>La tonga</h3>
+      <h6>calle 47 # 34-12</h6>
+      <button type="button" ui-sref="courts" class="btn btn-lg btn-success ver">Ver Canchas</button>
+
+    </div>
+   </div>
+  </div>
+  <br>
+
+</section>
