se agregan cambios en users-list

--- a/client/app/users/users-list/users-list.html
+++ b/client/app/users/users-list/users-list.html
@@ -33,7 +33,7 @@
           <td md-cell>{{item.numDocument}}</td>
           <td md-cell>{{item.idCities.idDepartment.name}}</td>
           <td md-cell>{{item.idCities.name}}</td>
-					<td md-cell><md-switch ng-model="item.active" aria-label="Switch 2" ng-change="vm.Cancelar(item)"> Activo: {{item.activo}} </md-switch></td>
+					<td md-cell><md-switch ng-model="item.active" aria-label="Switch 2" ng-change="vm.cambiarEstado(item)"> Activo: {{item.activo}} </md-switch></td>
 					<td md-cell>{{item.active}}</td>
           <td md-cell><a class="btn btn-primary" ui-sref="users-update({idUsers:item.idUsers})">Editar</a></td>
 				</tr>
