se hacen cambios en establecimientos

--- a/client/app/nosotros/nosotros.html
+++ b/client/app/nosotros/nosotros.html
@@ -10,7 +10,7 @@
         <h3 class="Tittle">¿Quienes somos?</h3>
         <h4 class="Text">Te ayudamos a no tener obstaculos para poderte divertir y hacer tu reservas desde cualquier lugar donde estes</h4>
       </div>
-      <div class="Informacion-item col-xs-12 col-md-5 col-md-push-2 col-xs-push-0">
+      <div class="Informacion-item col-xs-12 col-md-5 col-md-push-2 ">
         <i class=""></i>
         <img class="Cancha-image img-resposive" src="../assets/images/main/1.jpg">
         <h3 class="Tittle">¡Has tus reservas!</h3>
