--- a/client/app/forbidden/forbidden.html
+++ b/client/app/forbidden/forbidden.html
@@ -1,8 +1,9 @@
 <div class="forbidden">
   <div class="container">
-    <h1 class="ForbiddenTitle text-center col-xs-12 col-md-12 col-lg-12">¡No tienes permisos para este sitio!</h1>
-    <div class="row col-xs-12 col-md-6 col-lg-6 col-md-push-3 col-lg-push-3">
-      <img src="../assets/images/forbidden/ohoh.jpg" class="img-responsive" alt="no tienes acceso">
+    <h1 class="ForbiddenTitle text-center col-xs-12 col-md-12 col-lg-12">Lo Siento,</h1>
+    <img src="../assets/images/forbidden/1.jpg" class="img-responsive row col-xs-12 col-md-6 col-lg-6 col-md-push-3 col-lg-push-3" alt="no tienes acceso">
+    <h2  class="ForbiddenTitle text-center col-xs-12 col-md-12 col-lg-12" >¡No tienes permisos para este sitio!</h2>
+    <div class="">
     </div>
 
   </div>
