--- a/client/index.html
+++ b/client/index.html
@@ -102,6 +102,7 @@
     <script src="bower_components/blob-polyfill/Blob.js"></script>
     <script src="bower_components/file-saver.js/FileSaver.js"></script>
     <script src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
+    <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <script src="bower_components/angular-material-data-table/dist/md-data-table.js"></script>
     <!-- endbower -->
