se realiza proceso de establecimientos

--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -90,9 +90,9 @@
                              <th md-column> <strong>Apellidos Usuario</strong></th>
                              <th md-column> <strong>Establecimiento</strong></th>
                              <th md-column> <strong>Cancha</strong></th>
-                             <th md-column> <strong>Switch</strong></th>
+                             <!-- <th md-column> <strong>Switch</strong></th> -->
                              <th md-column> <strong>Cancelar</strong></th>
-                             <th md-column> <strong>Actualizar</strong></th>
+                             <!-- <th md-column> <strong>Actualizar</strong></th> -->
                            </tr>
                          </thead>
                          <tbody md-body>
@@ -107,9 +107,9 @@
                              <td md-cell>{{item.idUsers.lastNames}}</td>
                              <td md-cell>{{item.idSoccerFields.idHeadquarters.idEstablishments.name}}</td>
                              <td md-cell>{{item.idSoccerFields.name}}</td>
-                             <td md-cell><md-switch ng-model="item.activo" aria-label="Switch 2" ng-change="vm.cambiarEstado(item)"> Activo: {{item.activo}} </md-switch></td>
                              <td md-cell><md-button class="btn btn-warning"  ng-model="item.estado" aria-label="Switch 2" ng-click="vm.Cancelar(item)" >Cancelar: {{item.estado}} </md-button></td>
-                             <td md-cell><a class="btn btn-primary" >Editar</a></td>
+                             <!-- <td md-cell><md-switch ng-model="item.activo" aria-label="Switch 2" ng-change="vm.cambiarEstado(item)"> Activo: {{item.activo}} </md-switch></td> -->
+                             <!-- <td md-cell><a class="btn btn-primary" >Editar</a></td> -->
                            </tr>
                          </tbody>
                        </table>
