--- a/client/app/reservations/reservations-list/reservations-list.html
+++ b/client/app/reservations/reservations-list/reservations-list.html
@@ -21,7 +21,7 @@
           <th md-column> <strong>Establecimiento</strong></th>
           <th md-column> <strong>Cancha</strong></th>
           <th md-column> <strong>Cancelar</strong></th>
-          <th md-column> <strong>Actualizar</strong></th>
+          <!-- <th md-column> <strong>Actualizar</strong></th> -->
 				</tr>
 			</thead>
 			<tbody md-body>
@@ -44,7 +44,7 @@
                       <span ng-if="isChecked()">Un-</span>Select All
                     </md-checkbox> -->
 
-          <td md-cell><a class="btn btn-primary" >Editar</a></td>
+          <!-- <td md-cell><a class="btn btn-primary" >Editar</a></td> -->
 				</tr>
 			</tbody>
 		</table>
