--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -61,19 +61,19 @@
       <img class="imgInfo" src="../../assets/images/main/6.jpg" alt="" />
       <h3>Maracana</h3>
       <h6>Calle 22a # 21-12</h6>
-      <button type="button" class="btn btn-lg btn-success ver">Ver Mas</button>
+      <button type="button" ui-sref="courts({id:item.idEstablishments})" class="btn btn-lg btn-success ver">Ver Mas</button>
     </div>
     <div class="col-xs-12 col-md-4 img-thumbnail">
       <img class="imgInfo" src="../../assets/images/main/4.jpg" alt="" />
       <h3>Juventus</h3>
       <h6>Calle 42 # 9-12</h6>
-      <button type="button" class="btn btn-lg btn-success ver">Ver Mas</button>
+      <button type="button" ui-sref="courts({id:item.idEstablishments})" class="btn btn-lg btn-success ver">Ver Mas</button>
     </div>
     <div class="col-xs-12 col-md-4 img-thumbnail">
       <img class="imgInfo" src="../../assets/images/main/3.JPG" alt="" />
       <h3>La tonga</h3>
       <h6>calle 47 # 34-12</h6>
-      <button type="button" class="btn btn-lg btn-success ver">Ver Mas</button>
+      <button type="button" ui-sref="courts({id:item.idEstablishments})" class="btn btn-lg btn-success ver">Ver Mas</button>
 
     </div>
    </div>
