se realizan filtro de canchas por establecimientos

--- a/client/app/courts/courts.html
+++ b/client/app/courts/courts.html
@@ -1,8 +1,8 @@
-<h3 class=" text-center">establcimiento:</h3>
+<h3 class=" text-center">establecimiento:</h3>
 
   <div class="row">
-    <div class="col-md-12" ng-repeat="item in vm.soccerFields">
-      <div class="col-md-4 col-lg-offset-1 " >
+    <div class="col-md-4 col-xs-12" ng-repeat="item in vm.soccerFields">
+      <div class="col-lg-offset-1 " >
         <div  class="thumbnail">
           <img src="{{item.imagen}}"   height="100" width="100%" class="img-thumbnail top">
           <div class="caption">
