--- a/client/app/nosotros/nosotros.html
+++ b/client/app/nosotros/nosotros.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="card1 col-md-12">
-        <div class="firstinfo"><img src="assets/images/Profile/2.png"/>
+        <div class="firstinfo"><img src="assets/images/Profile/2.jpg"/>
           <div class="profileinfo">
             <h1>Carlos Jose Victoria</h1>
             <h3>Progamador</h3>
@@ -78,7 +78,7 @@
         </div>
       </div>
       <div class="card1">
-        <div class="firstinfo"><img src="assets/images/Profile/2.png"/>
+        <div class="firstinfo"><img src="assets/images/Profile/2.jpg"/>
           <div class="profileinfo">
             <h1>Carlos Jose Victoria</h1>
             <h3>Progamador</h3>
