--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -12,10 +12,12 @@
            <div class="row">
            <form name="" ng-submit="vm.create(form)">
 
-             <div class="col-xs-6">
-               <button href="#" class="btn btn-success btn-block select"ngf-select ng-model="vm.file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 700, height: 700}"><i class="fa fa-spinner"></i> Selecciones Archivo</button>
+             <div class="col-xs-7 col-md-7">
+               <button href="#" class="btn btn-success btn-block select "ngf-select ng-model="vm.file"
+               name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB"
+               ngf-min-height="100" ngf-resize="{width: 700, height: 700}"><i class="fa fa-spinner hidden-xs"></i> Selecciones Archivo</button>
              </div>
-             <div class="col-xs-6">
+             <div class="col-xs-5">
                <button class="btn btn-primary btn-block Subir" type="submit"><i class="fa fa-upload"></i> Subir foto</button>
              </div>
            </div>
