--- a/client/app/reservations/reservations.html
+++ b/client/app/reservations/reservations.html
@@ -139,20 +139,6 @@
         </div>
 
 
-          <!--div layout="row">
-            <md-input-container flex="45">
-              <label for="">Cancha</label>
-                  <div class="form-group">
-                    <input type="text" class="form-control" ng-model="vm.reservations.idSoccerFields.idSoccerFields" required>
-                  </div>
-              <div ng-messages="registerForm.typeDocument.$error">
-                <div ng-message="required">La cancha es requerida</div>
-              </div>
-            </md-input-container>
-            <div flex="10">
-
-            </div>
-          </div-->
 
 
           <div layout="row" layout-align="space-between center">
@@ -169,7 +155,7 @@
               </div>
             </md-input-container-->
 
-            <md-input-container flex>
+            <!-- <md-input-container flex>
               <md-select name="soccerFields" ng-model="vm.reservations.idSoccerFields.idSoccerFields" placeholder="Cancha" required>
                 <md-option  ng-value="{{item.idSoccerFields}}" ng-repeat="item in vm.soccerFields">
                   {{item.name}}
@@ -178,7 +164,7 @@
               <div ng-messages="registerForm.soccerFields.$error">
                 <div ng-message="required">Por favor ingrese una cancha.</div>
               </div>
-            </md-input-container>
+            </md-input-container> -->
           </div>
 
           <div class="text-center">
