--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -30,7 +30,7 @@
           </div>
 
           <div class="item">
-            <img class="img-responsive" src="assets/images/main/3.jpg" alt="...">
+            <img class="img-responsive" src="assets/images/main/4.jpg" alt="...">
             <div class="carousel-caption animated fadeInDownBig">
               <h3>Reserva ya en Social Soccer</h3>
               <p>Te facilitaremos tu reserva <br> Ahora solo sera en unos cuantos Clicks</p>
@@ -61,19 +61,19 @@
       <img class="imgInfo" src="../../assets/images/main/6.jpg" alt="" />
       <h3>Maracana</h3>
       <h6>Calle 22a # 21-12</h6>
-      <button type="button" ui-sref="courts({id:item.idEstablishments})" class="btn btn-lg btn-success ver">Ver Mas</button>
+      <!-- <button type="button" ui-sref="courts({id:item.idEstablishments})" class="btn btn-lg btn-success ver">Ver Mas</button> -->
     </div>
     <div class="col-xs-12 col-md-4 img-thumbnail">
       <img class="imgInfo" src="../../assets/images/main/4.jpg" alt="" />
       <h3>Juventus</h3>
       <h6>Calle 42 # 9-12</h6>
-      <button type="button" ui-sref="courts({id:item.idEstablishments})" class="btn btn-lg btn-success ver">Ver Mas</button>
+      <!-- <button type="button" ui-sref="courts({id:item.idEstablishments})" class="btn btn-lg btn-success ver">Ver Mas</button> -->
     </div>
     <div class="col-xs-12 col-md-4 img-thumbnail">
       <img class="imgInfo" src="../../assets/images/main/3.JPG" alt="" />
       <h3>La tonga</h3>
       <h6>calle 47 # 34-12</h6>
-      <button type="button" ui-sref="courts({id:item.idEstablishments})" class="btn btn-lg btn-success ver">Ver Mas</button>
+      <!-- <button type="button" ui-sref="courts({id:item.idEstablishments})" class="btn btn-lg btn-success ver">Ver Mas</button> -->
 
     </div>
    </div>
