--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -53,7 +53,7 @@
 </section>
 
 
-<section class="InfoContainer img-thumbnail col-md-12 " >
+<section class="InfoContainer img-thumbnail col-md-12 " ng-if="vm.authService.isAuthenticated()">
   <h2>Establecimientos</h2>
   <!-- <div class="container"> -->
    <div class="row text-center">
