se realizan cambios

--- a/client/app/establishments/establishments/establishments.html
+++ b/client/app/establishments/establishments/establishments.html
@@ -56,7 +56,7 @@
           <a class="right carousel-control" href="#{{item.idEstablishments}}"  target="_self" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
           <br>
         </div>
-        <button type="button" ui-sref="courts({id:item.idEstablishments})" class="text-center btn  btn-success ver col-md-6 col-md-push-3"> Ver Canchas</button>
+        <button type="button" ui-sref="courts({id:item.idEstablishments})" class="text-center btn  btn-success ver col-xs-12 col-md-6 col-md-push-3"> Ver Canchas</button>
       </div>
 
 
