se realizan cambios

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -103,7 +103,7 @@
     </div>
   </div>
 </section>
-<div class="container paquetes ">
+<!-- <div class="container paquetes ">
   <div class="row">
     <h1 class="text-center animated fadeInDown"><strong>¡Conoce los servicios que tenemos para tí!</strong></h1>
     <hr class="linea animated fadeInDown">
@@ -170,4 +170,4 @@
           </div>
       </div>
   </div>
-</div>
+</div> -->
