--- a/client/app/courts/courts.html
+++ b/client/app/courts/courts.html
@@ -1,13 +1,13 @@
-<h3 class=" text-center">establecimiento:</h3>
+<h2 class=" text-center"><strong>Canchas</strong></h2>
 
   <div class="row">
-    <div class="col-md-4 col-xs-12" ng-repeat="item in vm.soccerFields">
+    <div class="col-md-4 col-xs-12 col-sm-6" ng-repeat="item in vm.soccerFields">
       <div class="col-lg-offset-1 " >
         <div  class="thumbnail">
           <img src="../../assets/images/courts/1.jpg"   height="100" width="100%" class="img-thumbnail top">
           <div class="caption">
-            <h2>Describcion: {{item.name}}</h2>
-            <button type="button" class="btn btn-primary " ui-sref="reservations({id:item.idSoccerFields})" >Reservar</button>
+            <h2 class="text-center">{{item.name}}</h2>
+            <button type="button" class="btn btn-primary col-md-push-3 col-md-offset-5 col-sm-offset-5 col-xs-offset-4" ui-sref="reservations({id:item.idSoccerFields})" >Reservar</button>
           </div>
         </div>
       </div>
