--- a/client/index.html
+++ b/client/index.html
@@ -38,7 +38,7 @@
     <!-- build:css({.tmp,client}) app/app.css -->
     <link rel="stylesheet" href="app/app.css">
     <!-- build:css({.tmp,client}) app/main/main.css -->
-    <link rel="stylesheet" href="app/main/main.css">
+    <!-- <link rel="stylesheet" href="app/main/main.css"> -->
     <!-- build:css({.tmp,client}) app/main/main.css -->
 
 
